Fix Flowboard height overflow issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,3 +12,7 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.react-flow__panel {
+  display: none;
+}
